--- a/src/CSS/login.css
+++ b/src/CSS/login.css
@@ -1,10 +1,10 @@
 .V_login_back {
-    background-image: url("../Images/login_background.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), 
+                      url("../Images/login_background.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     width: 100%;
-    opacity: 0.9;
 }
 
 
@@ -44,8 +44,8 @@
 
 .V_otp {
     background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.0447917) 77.08%, rgba(255, 255, 255, 0) 100%);
-    width: 8%;
-    height: 44px;
+    width: 12%;
+    height: 60px;
     border-radius: 6px;
     color: white;
     border: 2px solid transparent;
@@ -107,22 +107,22 @@
 
 @media (max-width: 1440px) and (min-width: 1200px) {
     .V_otp {
-        width: 10%;
-        height: 44px;
+        width: 15%;
+        height: 60px;
     }
 }
 
 @media (max-width: 1199px) and (min-width: 992px) {
     .V_otp {
-        width: 12%;
-        height: 44px;
+        width: 15%;
+        height: 50px;
     }
 }
 
 @media (max-width: 991px) and (min-width: 768px) {
     .V_otp {
-        width: 12%;
-        height: 44px;
+        width: 15%;
+        height: 50px;
     }
 }
 
@@ -135,14 +135,21 @@
 
 @media (max-width: 575px) and (min-width: 481px) {
     .V_otp {
-        width: 12%;
+        width: 11%;
         height: 44px;
     }
 }
 
-@media (max-width: 480px) and (min-width: 320px) {
+@media (max-width: 480px) and (min-width: 374px) {
+    .V_otp {
+        width: 16%;
+        height: 44px;
+    }
+}
+
+@media (max-width:321px) {
     .V_otp {
         width: 18%;
-        height: 44px;
+        height: 40px;
     }
 }
