--- a/Front/src/CSS/Review.css
+++ b/Front/src/CSS/Review.css
@@ -154,8 +154,9 @@ td {
 
 
 .V_home_corousel_image {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
 }
 
 
