--- a/Front/src/CSS/Dashboard.css
+++ b/Front/src/CSS/Dashboard.css
@@ -27,7 +27,7 @@
     background: rgba(23, 31, 40, 1);
     padding: 40px 20px;
     border-radius: 5px;
-    height: 500px;
+    height: auto;
 }
 .ds_dash_chart .recharts-responsive-container{
     height: 400px !important;
