--- a/Front/src/CSS/Header.css
+++ b/Front/src/CSS/Header.css
@@ -209,3 +209,23 @@
         max-width: 300px;
     }
 }
+
+.sp_search_box{
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    width: 100%;
+    overflow-y: auto;
+    color: white;
+    max-height: 300px;
+    background-color: rgba(1, 1, 4, 1) !important;
+    background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.0447917) 77.08%, rgba(255, 255, 255, 0) 100%);
+    text-transform: capitalize;
+}
+.sp_search_box li{
+    padding: 10px 30px;
+    cursor: pointer;
+}
+.sp_search_box li:hover{
+    background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(236, 230, 230, 0.4) 0%, rgba(240, 234, 234, 0.045) 77.08%, rgba(245, 242, 242, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+}
