--- a/Front/src/CSS/Header.css
+++ b/Front/src/CSS/Header.css
@@ -90,6 +90,12 @@
     background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.0447917) 77.08%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     color: white; 
 }
+.ds_profile_img_main{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 50%;
+}
 
 @media (max-width:1441px) {
     .ds_header_main{
