--- a/Front/src/CSS/CoinMaster.css
+++ b/Front/src/CSS/CoinMaster.css
@@ -21,6 +21,9 @@
 input[type="time"]::-webkit-calendar-picker-indicator{
     filter: invert(100%) sepia(0%) saturate(5656%) hue-rotate(341deg) brightness(123%) contrast(102%);
   }
+  input[type="date"]::-webkit-calendar-picker-indicator{
+    filter: invert(100%) sepia(0%) saturate(5656%) hue-rotate(341deg) brightness(123%) contrast(102%);
+  }
 
 @media (max-width:1024px) {
     .ds_coin_master {
