--- a/Front/src/CSS/Dashboard.css
+++ b/Front/src/CSS/Dashboard.css
@@ -7,7 +7,7 @@
     /* height: 873px; */
     height: 100%;
     min-height: calc(100vh - 80px);
-    background: rgba(1, 1, 4, 1);
+    background: linear-gradient(#050614,#000101) ;
 }
 .ds_dash_inner{
     padding: 0px 40px;
