--- a/Front/src/CSS/UserMaster.css
+++ b/Front/src/CSS/UserMaster.css
@@ -2,6 +2,7 @@
     width: 50px;
     height: 50px;
     object-fit: cover;
+    border-radius: 5px;
 }
 .ds_user_master_pending{
     background: rgba(255, 225, 66, 1);
@@ -60,6 +61,7 @@
      width: 130px;
      height: 130px;
      object-fit: cover;
+     border-radius: 10px;
   }
 
 
